# ChatMemory

./: .gitignore  .graphifyignore  .pre-commit-config.yaml  AGENTS.md  COMMANDS.md  CONTEXT.md  README.md
backend/: .env.example  README.md  main.py  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: ask.py  jobs.py  people.py  persona.py  settings.py  workspaces.py
backend/app/core/: config.py  gpu_lock.py  logging_config.py  memory.py  paths.py  schemas.py
backend/app/graphs/: ingest.py  persona_chat.py  persona_train.py  qa.py
backend/app/prompts/: __init__.py  persona_build.py  persona_chat.py  qa.py  routing.py  validation.py
backend/app/services/: analytics.py  bm25.py  chroma.py  embed.py  gemini.py  history_router.py  jobs.py  langchain_embed.py  langchain_llm.py  persona_chat.py  rag_chain.py  rate_limit.py  rerank_utils.py  retrieval.py  vector_index.py  workspace.py
backend/app/services/parser/: preprocess.py  whatsapp.py
backend/scripts/: fix-windows-ml.ps1
backend/tests/: conftest.py
backend/tests/fixtures/whatsapp/: android_group.txt  (+1 more)
backend/tests/integration/: test_api_health.py
backend/tests/unit/: test_analytics.py  test_bm25.py  test_chroma.py  test_embed.py  test_gemini.py  test_history_router.py  test_job_eta.py  test_langchain_llm.py  test_memory.py  test_ollama_rerank.py  test_persona_chat.py  test_persona_train.py  test_qa.py  test_rag_chain.py  test_rerank_utils.py  test_retrieval.py  test_vector_store.py  test_whatsapp_parser.py  test_whatsapp_preprocess.py
(+59 files in other folders)
